# vsnder_public

./: .gitignore  README.md  check.py  docker-compose.prod.yml  docker-compose.yml  logs.json  main.py  pyproject.toml
app/: __main__.py  (+2 more)
server/: Dockerfile  pyproject.toml
server/app/: CSS_students.csv  __main__.py  db.py  insert_users_to_db.py
server/app/commands/: change_password_by_username.py  update_user_by_username.py
server/app/common/: redis.py
server/app/common/utils/: auth.py  http.py
server/app/dto/: __init__.py  auth.py  base.py  message.py  user.py
server/app/models/: message.py  user.py
server/app/modules/message/core/commands/: create_message.py
server/app/modules/message/core/queries/: get_message_picture_by_id.py  get_messages_for_user_by_id.py
server/app/modules/message/http/: __init__.py  delete_message.py  get_message_image.py  get_messages.py  post_message.py
server/app/modules/user/core/commands/: change_password_by_id.py  create_log_entry.py  set_user_image_by_id.py  update_user_by_id.py
server/app/modules/user/core/queries/: check_user_image_by_id.py  get_user_by_id.py  get_user_by_username.py  get_user_image_by_id.py  get_user_password_by_id.py  get_users.py  get_users_page.py
server/app/modules/user/http/: __init__.py  get_has_user_image.py  get_logout.py  get_random_user.py  get_user.py  get_user_image.py  get_users.py  get_users_page.py  post_change_password.py  post_login.py  post_user.py  post_user_image.py
server/app/queries/: get_user_password_by_username.py
server/app/routes/: __init__.py  index.py
server/app/templates/: exhibition.html  index.html
server/app/utils/: logger.py  swagger.py
(+169 files in other folders)
